--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<head>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
 <body>
   <div class = "banner-image">
     <h1> Nixon's Trip to China <h1>
