--- a/main.html
+++ b/main.html
@@ -2,6 +2,7 @@
 
   <head>
     <title>Nixons Trip to China</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   
   <body>
