--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <div class = "banner-image">
-    <h1> Nixon's Trip to China <h1>
+    <h1 class="heading">Welcome to my website</h1>
     <div class = "button">
       <a href="main.html">Get Started</a>
     </div> 
