--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <head>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
-  <div class = "banner-image">
-    <h1 class="heading">Nixon's Trip to China</h1>
-    <div class = "button">
-      <a href="main.html">Get Started</a>
-    </div> 
+<body id="index">
+    <div class="container">
+      <h1 class="heading">Nixon's Trip to China</h1>
+      <a href="main.html"><button>Get Started</button></a>
+    </div>
   </div> 
 </body>  
 </html>
-
-
-  
- 
