--- a/main.html
+++ b/main.html
@@ -96,8 +96,10 @@
        <div class="sub-section">
       <h1> During <h1>
         <br><br>
-      <p> Febuary 17, 1972. Nixon and the First lady take the Presidential jet, 
-        
+      <p> Febuary 17, 1972. Nixon and the First lady left on the Presidential plane, the  Air Force One, and took their time travling to China.
+        Arriving to Bejing on Febuary 21hey landed and once stoped at the predetirmined spot on the runway, Nixon walks down the steps off the plane 
+        and immediately shakes the hand of Chinese Premier Zhou Enlai whom Nixon wanted to show respect. This moment is captured in the picture 
+        from the top of this page, called the handshake that changed the world, it was telavised live to the United States as was many parts of this trip. 
         <br><br>
         Nixon said while visiting the Great Wall,
         "One stands there and sees the wall going to the peak of this mountain and I think that you would have to conclude that this is
