moved things around, wrote where sections need to go

--- a/about.html
+++ b/about.html
@@ -23,6 +23,18 @@
         </nav>
         </header>
 
+
+
+
+        <div class="page-container">
+
+
+            <section style="margin-top: 200px; height: 400vh;">
+                <h3>Group Members</h3>
+
+            </section>
+        </div>
+
     </body>
 
 
