--- a/about.html
+++ b/about.html
@@ -30,7 +30,46 @@
 
 
             <section style="margin-top: 200px; height: 400vh;">
-                <h3>Group Members</h3>
+                <img class="section-heading" src="images/group-members-heading.png" alt="Group Members">
+
+                <!-- group members -->
+                <div class="split-container" style="height: 300px;">
+
+                    <div  class="left" >
+                        <h2>Sam</h2>
+                        <h3>Role</h3>
+                        <p>personal decription</p>
+                    </div>
+                    <div  class="right" >
+                        <h2>Dylan</h2>
+                        <h3>Role</h3>
+                        <p>personal decription</p>
+                    </div>
+                </div>
+
+                <div class="split-container" style="height: 300px;">
+
+                    <div class="left">
+                        <h2>Katelyn</h2>
+                        <h3>Role</h3>
+                        <p>personal decription</p>
+                    </div>
+                    <div  class="right">
+                        <h2>Jerisa</h2>
+                        <h3>Role</h3>
+                        <p>personal decription</p>
+                    </div>
+                </div>
+                <div style="text-align: center;">
+                    <h2>Derrick</h2>
+                    <h3>Role</h3>
+                    <p>personal decription</p>
+                </div>
+
+                
+
+
+
 
             </section>
         </div>
