--- a/about.html
+++ b/about.html
@@ -37,12 +37,14 @@
 
                     <div  class="left" >
                         <h2>Sam</h2>
-                        <h3>Role</h3>
-                        <p>personal decription</p>
+    
+                        <p>I’m a senior at WWU majoring in English Creative Writing and minoring in Internet Resource Creation and Management. 
+                            I was responsible for network visualizations using Gephi (and the associated tutorial), as well as identifying and 
+                            summarizing specific recordings relevant to the China trip. </p>
                     </div>
                     <div  class="right" >
                         <h2>Dylan</h2>
-                        <h3>Role</h3>
+
                         <p>personal decription</p>
                     </div>
                 </div>
@@ -51,19 +53,25 @@
 
                     <div class="left">
                         <h2>Katelyn</h2>
-                        <h3>Role</h3>
-                        <p>personal decription</p>
+
+                        <p>I am a senior at Western Washington University majoring in Management Information Systems, 
+                            and my minor is Internet Resource Creation and Management. I was responsible for the website development, 
+                            as well as the Tableau Visualizations of the participants in the recordings. I created the Storymap.js 
+                            visualization as well that highlighted the prominent places Nixon visited during his trip to China.</p>
                     </div>
                     <div  class="right">
                         <h2>Jerisa</h2>
-                        <h3>Role</h3>
-                        <p>personal decription</p>
+
+                        <p>I'm a Freshman at WWU, and am currently undecided, however I am interested in some form of a 
+                            Computer Science degree. I was responsible for the about page, and the White house map.</p>
                     </div>
                 </div>
                 <div style="text-align: center;">
                     <h2>Derrick</h2>
-                    <h3>Role</h3>
-                    <p>personal decription</p>
+
+                    <p>I'm a sophomore at WWU majoring in Computer Science, and minoring in mathematics. 
+                        Also, I would like to give a big shoutout to Dan Chard, a professor at WWU who helped 
+                        give information about the Nixon Presidency era of America. </p>
                 </div>
 
                 
