--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
         <div class="page-container">
 
 
-            <section style="margin-top: 200px; height: 400vh;">
+            <section style="margin-top: 200px; height: fit-content;">
                 <img class="section-heading" src="images/group-members-heading.png" alt="Group Members">
 
                 <!-- group members -->
