--- a/about.html
+++ b/about.html
@@ -79,7 +79,10 @@
                         give information about the Nixon Presidency era of America. </p>
                 </div>
                 
-                <div class="header-container"><h3>Technical Tutorial</h3></div>
+                
+                <div class="header-container">
+              <img class="section-heading" src="images/technical-tutorial.png" alt="Technical Tutorial">
+            </div>
 <!-- Technical Tutorial -->
                 <p>In this video, Sam goes over how he used the Nixon Tapes dataset to create a network visualization.</p>
                 <video controls src="videos/TechnicalTutorialVideo1.mp4"></video>
@@ -87,7 +90,9 @@
 <!-- Documents -->
 
 
-<div class="header-container"><h3>Data Critique</h3></div>
+<div class="header-container">
+              <img class="section-heading" src="images/critique.png" alt="Data Critique">
+            </div>
 
 <div>
     <p>We selected the White House Tapes of the Nixon Administration as our dataset. The White House tapes contain recordings of President Richard Nixon’s telephone calls and meetings taken in multiple places, from the White House’s Oval Office to conference rooms in China. The recordings came from recording devices placed in the various rooms per the request of President Nixon. The recordings span over two years, from February 16, 1971 to July 18, 1973.  </p> 
@@ -101,7 +106,9 @@
     <p>The National Archives and Records Administration (NARA) goal is to archive as much history as possible for public use. Whether it be to prove heritage, family member(s) serving in the military, or researching a historical topic of interest, as they state as examples. NARA has 43 facilities in 17 states with 2,569 staff members where they keep all that is archived ranging from paper, artifacts, film, photographs, aerial images, maps/charts, Architectual/engineering drawings, and electronic records. We will be focusing on the electronic records. To be better suited for the public, the NARA uses plain language, as they call it, so that everyone can read and understand what they are reading. Some of the biases they could have are, not letting information out to the public that they deem unsafe or unlawful as stated in their explanation of what they do there is 1-3% of records that cannot be shown for important or legal reasons, or any information that the public would find interesting to get more publicity.  </p> 
 </div>
 
-<div class="header-container"><h3>Annotated Bibliography</h3></div>
+<div class="header-container">
+              <img class="section-heading" src="images/annotated-bib.png" alt="Technical Tutorial">
+            </div>
 <div style="text-indent: -36px; padding-left: 36px;">
 
 <p> Burr, William. Nixon's Trip to China. 11 December 2003. 30 January 2023. <https://nsarchive2.gwu.edu/NSAEBB/NSAEBB106/>. 
