--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
             
             <section style="margin-top: 200px; height: fit-content;">
                 <br>
-                <div class="header-container"><h1>About</h1></div>
+                 <div class="header-container"><img class="section-heading" src="images/about.png" alt="Group Members"></div>
                 <br>
                 <p>This project was made possible with the “White House Tapes of the Nixon Administration, 1971-1973" dataset, available here: <a href="https://www.archives.gov/open/nixon/37-wht-dataset-conversationlist.html ">Nixon Tapes</a></p>
             
