--- a/main.html
+++ b/main.html
@@ -339,7 +339,7 @@
 
           <div class="split-container">
           <div class="left">
-            <img width="73%" src="images/onchina-henry.jpg" alt="On China Book by Henry Kissinger">
+            <img width="73%" src="images/kissinger-on-china.png" alt="On China Book by Henry Kissinger">
 
           </div>
           <div class="right" style="text-align: left;">
