--- a/main.html
+++ b/main.html
@@ -354,7 +354,7 @@
           </div>
           
           <h3>Textual Analysis</h3>
-            <img src="image/on-china-visualization.JPG" alt="On China Chapter 9 Common Words">
+            <img src="image/on-china-visualization.png" alt="On China Chapter 9 Common Words">
           
           <iframe style='width: 100%; height: 500px;' src='https://voyant-tools.org/tool/Cirrus/?palette=36552133eda88bb57010ea7f7728dea9&whiteList=&visible=25&fontFamily=%22Times%20New%20Roman%22%2C%20Times%2C%20serif&corpus=292e8b49b9b2094fcbb2a2015cc5d50e'></iframe>
         <!-- </div> -->
