--- a/main.html
+++ b/main.html
@@ -255,6 +255,12 @@
 
 
                 <img src="images/nixonhandshake.webp" alt="">
+          
+          <div class="header-container">
+              <img class="section-heading" src="images/timeline.png" alt="TImeline of Nixon's Trip in China">
+            </div>
+           <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1YCCkfW8HVbObC-jX_Apg92jwwhpRkYTgCTevy9H9SV0&font=Default&lang=en&initial_zoom=2&height=650' 
+                   width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe> 
 
 
 
