--- a/about.html
+++ b/about.html
@@ -50,7 +50,8 @@
                     <div  class="right" >
                         <h2>Dylan</h2>
 
-                        <p>personal decription</p>
+                        <p>I am a sophomore at WWU majoring in Recreation and Leisure. I made the timeline along with gathering information 
+                            and making additions to some of the written portions of our project.  </p>
                     </div>
                 </div>
 
