--- a/main.html
+++ b/main.html
@@ -382,8 +382,8 @@
 
           </div>
           </div>
-          <h3>Textual Analysis</h3>
-            <img src="images/on-china-visualization.png" alt="On China Chapter 9 Common Words">
+
+            <img style="margin: 0 auto;" src="images/on-china-visualization.png" alt="On China Chapter 9 Common Words">
           
           
       </section>
