--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
   <head>
     <title>Nixon's Trip to China</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="icon" type="image/png" href="images/favicon.png"/>
     
   </head>
   
