--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="icon" type="image/png" href="images/favicon.png"/>
 </head>
 <body id="index">
     <div class="container">
