--- a/main.html
+++ b/main.html
@@ -395,7 +395,7 @@
           </div>
           
 
-          </div>
+          <div class="sub-section">
             
             <p> Below, we took the text from Chapter 9: “Resumption of Relations: First Encounters with Mao and Zhou.” and put it into a 
               word processor to examine the frequency of words that showed up throughout this chapter. This visualization provides a great 
