--- a/main.html
+++ b/main.html
@@ -245,11 +245,11 @@
             </div>
         
         
-         <div class="split-container">
-        <div class="left">
+         <div height="300px;" class="split-container">
+        <div height="300px;" class="left">
         <img style="width: 100%;"src="images/nixon-mao-meet.JPG" alt="Nixon and Mao Shaking hands">
         </div>
-        <div class="right">
+        <div height="300px;" class="right">
           <p> this will be the intro paragraph to during section</p>
         </div>
         </div>
