--- a/main.html
+++ b/main.html
@@ -406,7 +406,7 @@
             </p>
           </div>
 
-          <img style="margin: 0 auto;" src="images/on-china-visualization.png" alt="On China Chapter 9 Common Words">
+          <img  class="section-heading" style="margin: 0 auto;" src="images/on-china-visualization.png" alt="On China Chapter 9 Common Words">
           
           
       </section>
