Added "before" section intro

--- a/main.html
+++ b/main.html
@@ -133,7 +133,9 @@
 
           <div class="sub-section">
 
-            <h3>intro about before trip</h3>
+            <p>
+              Tensions where high between China and the United States before Nixons monumental trip in February 1972. The Vietnam war put Nixon in the spotlight as the nation waited to see how he would handle international relations. Before 1972, the last time for a president visited China was in 1949, when the Peoples Republic of China was established. After that no formal contact was held between leaders, once the Vietnam war began things became even more difficult. With public opinion focusing on the US involvement in Vietnam and the public beginning to lose trust in International relations, Nixon had to make a move. With the months leading up to the Presidents visit, small occurrences happened to allow this historic moment to happen. In 1971, USA and China’s Table Tennis teams met at a tournament, this was a huge step for both countries. Then as a gesture of peace the Chinese team suggested they come back over to Bejing to play table tennis. This was the step that allowed talks of possible communication, from then on, it was a domino effect to Nixons visit. 
+            </p>
 
             <div class="header-container">
               <img class="section-heading" src="images/participants.png" alt="Recording Participants">
