--- a/main.html
+++ b/main.html
@@ -274,12 +274,9 @@
             </div>
               <iframe src="https://uploads.knightlab.com/storymapjs/7fd8a8b546bfe2f829b8854eb9e9db04/nixon/index.html" frameborder="0" width="100%" height="800"></iframe>
 
-              <p>During President Nixons trip to China, he visited many important landmarks in China, this google maps visualization 
-                allows us to see the expansive range of places he was able to visit. Using google maps, it gives a clear map of the 
-                locations and provides a modern touch to the exploration of places. This visualization is important to our 
-                understanding of Nixons trip as many of the details regarding what he accomplished while there are blurry, with 
-                this map it shows how mobile and involved Nixon was during the visit. Allowing deeper conversations of his impact 
-                on international relations.  </p>
+              <p>During President Nixon's trip to China, he visited many important landmarks in China, this story map visualization  
+                  allows us to see the many prominent places he was able to visit. This visualization is important to our understanding of Nixons trip as many of the locations have significant value and symbolism behind it. Such as 
+                  the Forbidden City, in which Zhou gave a guided tour to, which is a very important complex as it was the former Chinese imperial palace. </p>
 
 
           
