--- a/main.html
+++ b/main.html
@@ -255,7 +255,12 @@
         <img style="width: 100%;"src="images/nixon-mao-meet.JPG" alt="Nixon and Mao Shaking hands">
         </div>
         <div height="300px;" class="right">
-          <p> this will be the intro paragraph to during section</p>
+          <p> Once it was finalized that President Nixon would be making the trip over to China, 
+            the news was filled with positive political light. The hope seemed to rise, as this trip could 
+            open up many doors for international relations for the US. Nixon visited many key places in China, 
+            but his conversations with President Mao are the staple of the trip, this showed a bright future for 
+            the country's relations. The overall trip wasn’t highly publicized, but the week still held its significance
+            and was rightfully named “The Week that Changed the World”.  </p>
         </div>
         </div>
         
