--- a/main.html
+++ b/main.html
@@ -422,7 +422,7 @@
             </p>
           </div>
 
-        <div class="section-heading">
+        <div style="text-align: center; margin: 0 auto;">
           <img   style="margin: 0 auto;" src="images/on-china-visualization.png" alt="On China Chapter 9 Common Words">
         </div>
           
