--- a/main.html
+++ b/main.html
@@ -104,7 +104,7 @@
               <div class="recording">
           <img width="100%" src="images/map-of-recording-locations.png" alt="Recording Locations">
 
-            <div style="margin:0 15%;">
+            <div style="margin:0 15%; font-size:1.3em;">
               <h4> Blue Pin: Tape was recorded in a room in the area of the National Security Council Office. <br>
                 Green Pin:  Tape was recorded in the Oval Office.  <br>
                 Yellow Pin: Tape was recorded in the Dwight Eisenhower Executive Office Building, towards the South part of the building. <br>
