--- a/main.html
+++ b/main.html
@@ -105,10 +105,10 @@
           <img width="100%" src="images/map-of-recording-locations.png" alt="Recording Locations">
 
             <div style="margin:0 15%; font-size:1.3em;">
-              <h4> Blue Pin: Tape was recorded in a room in the area of the National Security Council Office. <br>
-                Green Pin:  Tape was recorded in the Oval Office.  <br>
-                Yellow Pin: Tape was recorded in the Dwight Eisenhower Executive Office Building, towards the South part of the building. <br>
-                Purple Pin: Tape was recorded in the Dwight Eisenhower Executive Office Building, towards the central portion of the building. <br>
+              <h4> Blue Pin: Tape was recorded in a room in the area of the National Security Council Office. <br><br>
+                Green Pin:  Tape was recorded in the Oval Office.  <br><br>
+                Yellow Pin: Tape was recorded in the Dwight Eisenhower Executive Office Building, towards the South part of the building. <br><br>
+                Purple Pin: Tape was recorded in the Dwight Eisenhower Executive Office Building, towards the central portion of the building. <br><br>
                 Red Pin: This tape was recorded in the central portion of Camp David, in the camp office.    </h4>
             
             </div>
